<resources>
    <string name="app_name">TabooChat</string>
    <string name="action_settings">Settings</string>
    <string name="anonymous">anonymous</string>
    <string name="choose_federated">Choose a convenient login</string>
    <string name="create_login">Login with TabooChat or Create a TabooChat profile</string>
    <string name="bttn_login">Login</string>
    <string name="bttn_create">Create Account</string>
    <string name="enter_email">Email:</string>
    <string name="email_hint">enter email</string>
    <string name="enter_password">Password:</string>
    <string name="password_hint">enter password</string>
    <string name="auth_failed">User creation FAILED</string>
    <string name="menu_sign_out">Sign Out</string>
</resources>
