<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/bttn_create"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/bttn_create"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/create_login_text"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toRightOf="@+id/bttn_login"
        android:layout_marginLeft="40dp" />

    <Button
        android:text="@string/bttn_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/bttn_login"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/create_login_text"
        android:layout_marginStart="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="80dp" />

    <TextView
        android:text="@string/choose_federated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/federated_text"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/create_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_login_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

</android.support.constraint.ConstraintLayout>